# nipype1-examples

./: README.md
.circleci/: Dockerfile  config.yml  test_py2_fmri_spm_nested_multiproc_l2.sh  test_py3_fmri_fsl_feeds_linear_l1.sh  test_py3_fmri_fsl_reuse_linear_l1.sh  test_py3_fmri_spm_dartel_multiproc_l1.sh  test_py3_fmri_spm_dartel_multiproc_l2.sh  test_py3_fmri_spm_linear_3d.sh  test_py3_fmri_spm_linear_4d.sh  test_py3_fmri_spm_nested_multiproc_l1.sh
.circleci/tools/: retry_cmd.sh
package/: setup.cfg  setup.py
package/niflow/nipype1/examples/: __init__.py  cli.py  dmri_preprocessing.py  fmri_spm_dartel.py  inspecting_workflows.py  workflow.py
