[metadata]
version = attr: niflow.nipype1.examples.__version__
url = https://github.com/niflows/niflow-nipype1-examples
author = nipype developers
author_email = neuroimaging@python.org
maintainer = nipype developers
maintainer_email = neuroimaging@python.org
description = niflow-nipype1-examples workflow package
license = Apache License, 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    nipype
    niflow-nipype1-workflows

[options.entry_points]
console_scripts =
    niflow-nipype1-examples = niflow.nipype1.examples.cli:main
